--- a/0.1b/index.html
+++ b/0.1b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-
+    
     <!-- This script is added by PhoneGap build -->
     <!-- <script type="text/javascript" src="cordova.js"></script> -->
     
@@ -42,8 +42,9 @@
 
     <!-- App -->
     <link rel="stylesheet" type="text/css" href="index.css" />
+   
     <script type="text/javascript" src="index.js"></script>    
-
+     <script type="text/javascript" src="data/db.js"></script>
     <!-- Layouts -->
     <script type="text/javascript" src="layouts/SlideOut/SlideOutLayout.js"></script>
     <link rel="stylesheet" type="text/css" href="layouts/SlideOut/SlideOutLayout.css" />
@@ -56,6 +57,7 @@
     <!-- App views -->
     <link rel="stylesheet" type="text/css" href="views/home.css" />
     <script type="text/javascript" src="views/home.js"></script>
+    <script type="text/javascript" src="views/newest.js"></script>
     <link rel="dx-template" type="text/html" href="views/home.html"/>
     <link rel="dx-template" type="text/html" href="views/newest.html"/>
 </head>
