--- a/0.1b/index.html
+++ b/0.1b/index.html
@@ -58,8 +58,10 @@
     <link rel="stylesheet" type="text/css" href="views/home.css" />
     <script type="text/javascript" src="views/home.js"></script>
     <script type="text/javascript" src="views/newest.js"></script>
+    <script type="text/javascript" src="views/popular.js"></script>
     <link rel="dx-template" type="text/html" href="views/home.html"/>
     <link rel="dx-template" type="text/html" href="views/newest.html"/>
+    <link rel="dx-template" type="text/html" href="views/popular.html"/>
 </head>
 <body>
     <div class="dx-viewport"></div>
